# NR_GPU_LDPC

./: .clang-format  .gitignore  CMakeLists.txt  Linking_With_Other_Projects.md  Overview.md  README.md
lib/utils/: helper_cuda.h  helper_string.h  timer.h
src/: Gen_shift_value.h  encoding_tools.cpp  encoding_tools.h  globals.h  gpu_decoder_top.cu  gpu_decoder_top.h  host_helpers.cpp  host_helpers.h  ldpc_kernels.cu  ldpc_kernels.h  main.cpp  nr_ldpc.cpp  nr_ldpc.h  setup_exp.cu  setup_exp.h  types.h
src/cuda_gpu_wrapper/: gpu_setup.cu  gpu_setup.h
src/h_matrices/: h_bg_1_i_0.h  h_bg_1_i_1.h  h_bg_1_i_2.h  h_bg_1_i_3.h  h_bg_1_i_4.h  h_bg_1_i_5.h  h_bg_1_i_6.h  h_bg_1_i_7.h  h_bg_2_i_0.h  h_bg_2_i_1.h  h_bg_2_i_2.h  h_bg_2_i_3.h  h_bg_2_i_4.h  h_bg_2_i_5.h  h_bg_2_i_6.h  h_bg_2_i_7.h
